# domains

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03665cf5a894_check_schedule_t06.py  100985e73616_ssl_certificates_t08.py  124616430a20_registrar_default_project.py  1d02dbde3f59_alert_rules_and_events_t12.py  1f2a0416a1c9_companies_projects_tags_user_scope_fks_.py  22ca9ba9bd20_check_result_partitioned_by_month_t07.py  39c3caccc2e0_health_checks_and_results_t10.py  70ba19e2d6db_settings_and_vt_results_t09.py  80e442789a72_auth_users_scopes_audit_log_t02.py  81d9ed1584b9_registrars_accounts_unassigned_domain_.py  9a9e33ca6f3d_notification_channels_and_log_t11.py  c309a4097dc4_user_mcp_allowed_flag.py  cbce6deeeef0_payments_t15.py  de5459c76458_user_totp_2fa_fields_t22.py  e2b4151202a4_domains_domain_tags_field_history_t04.py  e8545037123e_api_tokens_and_webhook_endpoints_t21.py
app/: __init__.py  config.py  db.py  deps.py  log.py  main.py  templating.py
app/api/: __init__.py  health.py  metrics.py  v1.py
app/channels/: __init__.py  base.py  (+2 more)
docker/: entrypoint.sh
docs/: DEPLOY.md  MCP.md  PLAN.md  SPEC.md  security-audit.md
monitoring/: prometheus.yml
scripts/: archive_dead.py  create_admin.py  deploy.sh  pg_dump.sh  purge_demo.py  seed.py  seed_bulk.py
templates/: _components.html  base.html  home.html  login.html
tests/: conftest.py
(+179 files in other folders)
